# powerimaginatorserver

./: .gitignore  README.md  modal_wrapper.py  pyproject.toml
main_module/: main.py
workflows/: PowerImaginator.json  PowerImaginatorCUDA.json
