[project]
name = "powerimaginatorserver"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "accelerate",
    "diffusers",
    "fastapi[standard]>=0.117.1",
    "hf-transfer>=0.1.9",
    "modal>=1.1.4",
    "numpy>=2.3.3",
    "peft",
    "pillow>=11.3.0",
    "python-multipart>=0.0.20",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "transformers",
]

[tool.uv.sources]
diffusers = { git = "https://github.com/huggingface/diffusers" }
transformers = { git = "https://github.com/huggingface/transformers" }
accelerate = { git = "https://github.com/huggingface/accelerate" }
peft = { git = "https://github.com/huggingface/peft" }
